--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ font-size: 18px;
 border: 0px;
 }
 div{
-text-align: center
+text-align: center img src ="woman.jpeg" width = 300px height = 300px
 }
