--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ border: 0px;
 button{
 display:flex;
 align-items:center;
-justify-content:center img src ="woman.jpeg" 
+justify- img src ="woman.jpeg" content:center  
 }
