--- a/style.css
+++ b/style.css
@@ -10,5 +10,8 @@ border: 0px;
 button{
 display:flex;
 align-items:center;
-justify- img src ="woman.jpeg" content:center  
+justify-content:center  
+}
+button{
+img src ="woman.jpeg"
 }
