--- a/style.css
+++ b/style.css
@@ -13,5 +13,5 @@ align-items:center;
 justify-content:center  
 }
 button{
-img src ="woman.jpeg"
+img src ="woman.jpeg" width = 300px height = 300px alt = "აქ უნდა ჩანდეს ფოტო"
 }
